scrollbar fix

--- a/src/client/styles/layout/app.less
+++ b/src/client/styles/layout/app.less
@@ -12,8 +12,11 @@ body {
 }
 
 #MainView {
-    height: 100vh;
-    overflow-y: scroll;
-    padding-top: 75px;
+    height: ~"calc(100vh - 50px)";
+    overflow-y: auto;
+    padding-top: 25px;
+    position: fixed;
+    top: 50px;
+    width: 100%;
     z-index: -100;
 }
