--- a/src/client/styles/layout/navbar.less
+++ b/src/client/styles/layout/navbar.less
@@ -1,5 +1,5 @@
 .navbar {
-    position: absolute;
+    position: fixed;
     width: 100%;
     margin-bottom: 0;
     z-index: 100;
